<resources>
    <string name="app_name">CheffOnline</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_enter_your_name">Enter Your Name</string>
    <string name="hint_enter_email_id">Enter Email ID</string>
    <string name="hint_enter_mobile_number">Enter Mobile Number</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="text_register">Register</string>
    <string name="text_sign_up">Sign-Up</string>
    <string name="text_login">Login</string>
    <string name="orTextDevider">OR</string>
    <string name="login_text_header">Login</string>
    <string name="launcher_image_text">Launcher Image</string>
    <string name="login_success_snackbar_text">SUCCESS</string>
    <string name="error_email_invalid">You entered invalid email address</string>
    <string name="error_password_empty">Password can\'t be blank</string>
    <string name="error_email_password">Please enter valid email and a password</string>
</resources>