<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_guideline"
        android:gravity="center"
        tools:context=".ui.auth.SignUpFragment">

        <TextView
            style="@style/HeadingTextView"
            android:fontFamily="@font/roboto"
            android:text="@string/text_sign_up"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_gravity="center"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:digits="qwertyuioplkjhgfdsazxcvbnm"
                android:hint="@string/hint_enter_your_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_enter_email_id" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_smartphone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:digits="0987654321"
                android:hint="@string/hint_enter_mobile_number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/hint_enter_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_marginTop="@dimen/padding_small"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>